[BUGFIX] File upload button is collapsed in Chrome 21
In Chrome 21, the FlashUploader button is collapsed to a few pixels of
height. So it is nearly impossible to hit the button.

Releases: 6.0, 4.7, 4.6, 4.5
Resolves: #39659

--- a/typo3/sysext/t3skin/stylesheets/structure/module_file_upload.css
+++ b/typo3/sysext/t3skin/stylesheets/structure/module_file_upload.css
@@ -4,10 +4,14 @@ File Upload Window
 - - - - - - - - - - - - - - - - - - - - - */
 
 .swfupload {
+	bottom: 3px;
 	display: block;
-	height: 22px;
+	height: 25px;
+	left: 3px;
 	position: absolute;
+	top: 2px;
 	z-index: 2000;
+	width: 90px;
 }
 
 #t3-upload-window-infopanel div div {
